# time-series-arena

./: .gitignore  README.md  co2_forecast.ipynb  fnn.ipynb  nn_class_test.ipynb  pyproject.toml  transformer.ipynb  transformer2.ipynb
datasets/co2_emissions_coal/: co2_emissions_coal.csv  co2_emissions_coal_metadata.json
datasets/co2_emissions_geothermal/: co2_emissions_geothermal.csv  co2_emissions_geothermal_metadata.json
datasets/co2_emissions_natural_gas/: co2_emissions_natural_gas.csv  co2_emissions_natural_gas_metadata.json
datasets/co2_emissions_residual_fuel_oil/: co2_emissions_residual_fuel_oil_metadata.json
datasets/co2_emissions_residual_fuel_oils/: co2_emissions_residual_fuel_oils.csv
models/: arima.py  ffnn.py  model.py  xgboost.py
