[project]
name = "time-series-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pip>=25.0",
    "pmdarima>=2.0.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "xgboost>=2.1.4",
]

[tool.ruff]
include = ["pyproject.toml", "*.py", "*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = ["D", "N", "I", "E501", "E"]
ignore = ["ANN", "D410", "D413", "D100", "D211", "D213", "D203"]
